# nuwax-cli

./: .env  .gitignore  CLAUDE.md  Cargo.toml  README.md  README.zh-CN.md  SMART_UPLOAD_PROTECTION.md
.github/workflows/: cli-ui-build.yml  release.yml
cli-ui/: package.json
cli-ui/src/: App.tsx
cli-ui/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
cli-ui/src-tauri/capabilities/: default.json
cli-ui/src-tauri/icons/: icon.icns
cli-ui/src-tauri/src/: lib.rs
cli-ui/src/components/: BackupSelectionModal.tsx  OperationPanel.tsx  WorkingDirectoryBar.tsx
cli-ui/src/config/: commandConfigs.ts
cli-ui/src/utils/: tauri.ts
client-core/: Cargo.toml
client-core/fixtures/: .env  init_mysql_new.sql  init_mysql_old.sql  new_init_mysql.sql  old_init_mysql.sql
client-core/migrations/: init_duckdb.sql
client-core/src/: api.rs  api_types.rs  architecture.rs  authenticated_client.rs  backup.rs  config.rs  config_manager.rs  constants.rs  database.rs  database_manager.rs  downloader.rs  error.rs  lib.rs  mysql_executor.rs  upgrade.rs  upgrade_strategy.rs  version.rs
client-core/src/container/: command.rs  config.rs  config_test.rs  image.rs  mod.rs  modern_docker.rs  service.rs  types.rs  volumes.rs
client-core/src/db/: actor.rs  manager.rs  messages.rs
client-core/src/patch_executor/: error.rs  file_operations.rs  mod.rs  patch_processor.rs
client-core/src/sql_diff/: generator.rs  parser.rs  tests.rs
client-core/tests/: container_config_tests.rs  diff_sql_tests.rs  init_mysql_diff_tests.rs  mysql_integration_test.rs  simple_mysql_diff_test.rs  sql_syntax_validation_test.rs  volumes_test.rs
docs/: PROJECT_COMPLETION_SUMMARY.md  RELEASE_NOTES_v2.0.md  UPGRADE_ARCHITECTURE.md  docker-update.json
nuwax-cli/: Cargo.toml  PERFORMANCE_TESTING.md
nuwax-cli/benches/: upgrade_performance.rs
nuwax-cli/src/: app.rs  cli.rs  docker_utils.rs  init.rs  lib.rs  main.rs  project_info.rs  ui_support.rs
nuwax-cli/src/commands/: auto_backup.rs  auto_upgrade_deploy.rs  backup.rs  cache.rs  ducker.rs  (+6 more)
nuwax-cli/tests/: docker_upgrade_test.rs  health_check_test.rs  test_helpers.rs
spec/: file-operations-library-analysis.md  patch-version-management-final.md  patch-version-management.md  update-task.md  upgrade-architecture-enhancement.md
tmp/: docker-compose.yml
(+138 files in other folders)
